<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/beijing">
		     <LinearLayout
		    	android:id="@+id/top"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:orientation="horizontal" 
				android:focusable="true" 
				android:focusableInTouchMode="true"
				>
			   	<AutoCompleteTextView android:id="@+id/edit"
			        android:layout_width="match_parent"
			        android:completionThreshold="1"
			        android:layout_height="wrap_content" 
			        android:layout_marginRight="7px"
			        android:layout_marginTop="3dip"
			        android:hint="@string/InsertContactsName" 
			        android:layout_weight="1"
			        />
			     <Button android:id="@+id/AddContacts" style="@style/TextStyle2" android:text="@string/Add"/>
		    </LinearLayout>
		    <LinearLayout 
		    	android:id="@+id/bottom"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:orientation="vertical"
				android:layout_alignParentBottom="true"
				>
				<TableLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:stretchColumns="2"
				>
				<TableRow android:gravity="center_horizontal">
				<Button  
			        android:id="@+id/btn_add"    
					android:textSize="18dip"
					android:textStyle="bold"
			        android:layout_weight="1"
			        android:text="@string/determine" />
				<Button  
			        android:id="@+id/btn_back"   
					android:textSize="18dip"
					android:textStyle="bold"
			        android:layout_weight="1"
			        android:text="@string/back" />
			    </TableRow>
				</TableLayout>
			</LinearLayout>	
			<TextView 
				android:id="@+id/empty" 
				android:text="@string/tip1"
				android:layout_below="@id/top"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:textSize="20dip" 
				android:textColor="#FFFFFF"
				android:textStyle="bold" 
				android:layout_marginTop="10dip" 
				android:layout_marginRight="10dip" 
				android:gravity="center"
				/>
			<ListView android:id="@+id/list"
				        android:layout_width="fill_parent"
				        android:layout_height="fill_parent"
				        android:drawSelectorOnTop="false"
						android:layout_below="@id/top"
						android:layout_above="@id/bottom" 
						android:nextFocusUp="@+id/edit" 
						android:cacheColorHint="#00000000"
				    />
</RelativeLayout>
